--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <input type="password" class="form-control mt-2" onchange="input()" id="password" placeholder="Password">
             <label for="floatingPassword">Password</label>
             <p id="password-error" class="text-start">Password is <span id="strength"></span></p>
-            <img src="./img/eye-close.png" id="eyeicon">
+            <img src="./img/eye-close.png" onclick="eyeClick()" id="eyeicon">
             <img id="boltt" src="./img/boltt.png" onclick="createPasswordone()" class="img-fluid">
             </div>
 
